syntax = "proto3";

package rivet.backend.pkg.dynamic_servers.server_create;

import "proto/common.proto";
import "proto/backend/dynamic_servers.proto";

message Request {
    rivet.common.Uuid game_id = 1;
    rivet.common.Uuid cluster_id = 2;
    rivet.common.Uuid datacenter_id = 3;
    rivet.backend.dynamic_servers.ServerResources resources = 4;
    int64 kill_timeout_ms = 5;
    map<string, string> metadata = 6;
    
    oneof runtime {
        rivet.backend.dynamic_servers.DockerRuntime docker_runtime = 7;
    }
}

message Response {
    rivet.backend.dynamic_servers.Server server = 1;
}
